--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-  <nav class="navbar fixed-top bg-dark  navbar-expand-lg navbar-light shadow-lg" id="navigation-bar">
+  <nav class="navbar fixed-top bg-dark navbar-expand-lg navbar-light shadow-lg" id="navigation-bar">
 
     <a class="navbar-brand ms-2" href="#">
         <h4 class="p-0 m-0 ms-2">Logo</h4>
@@ -50,7 +50,7 @@
             <img src="img/carousel-1.webp" class="d-block w-100" alt="Images">
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                 <h1>Travel With Us</h1>
-                <Button class="btn btn-primary fw-semibold rounded-pill px-5 py-2">Book Now</Button>
+                <Button class="thm-btn fw-semibold rounded-pill px-5 py-2">Book Now</Button>
               </div>
           </div>
           <div class="carousel-item">
@@ -2097,7 +2097,7 @@
                   </div>
               </div>
               <div class="col-md-2">
-                  <button class="btn btn-primary btn-block" type="submit" style="height: 47px; margin-top: -2px;">Submit</button>
+                  <button class="thm-btn btn-block" type="submit" style="height: 47px; margin-top: -2px;">Submit</button>
               </div>
           </div>
       </div>
