--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="img/carousel-2.webp" class="d-block w-100" alt="Images">
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                 <h1>Book Your Heaven!</h1>
-                <Button class="btn btn-primary fw-semibold rounded-pill px-5 py-2">Book Now</Button>
+                <Button class="thm-btn fw-semibold rounded-pill px-5 py-2">Book Now</Button>
               </div>
           </div>
           
