--- a/index.html
+++ b/index.html
@@ -2172,7 +2172,7 @@
                     <div class="col-xl-6 col-lg-6">
                         <div class="destinations-two__top-left">
                             <div class="section-title text-left">
-                                <span class="section-title__tagline">Our destination lists</span>
+                                <span class="section-title__tagline text-primary">Our destination lists</span>
                                 <h2 class="section-title__title">Checkout Beautiful Places Arround the World</h2>
                             </div>
                         </div>
@@ -2263,7 +2263,7 @@
     </section>
     <!--Destinations Two End-->
 
-    <div class="container px-4 py-5">
+    <div class="container ">
         <h2 class="pb-2 border-bottom section-title__title">Destinations</h2>
     
         <div class="row owl-carousel place-carousel py-5">
@@ -2358,7 +2358,7 @@
 
 
  <!-- Footer Start -->
- <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
+ <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
             <a href="" class="navbar-brand">
@@ -2376,7 +2376,7 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Details</h5>
             <div class="d-flex flex-column justify-content-start">
-                <a class="text-white-50 link mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Home</a>
+                <a class="text-white-50 link mb-2 active" href="index.html"><i class="fa fa-angle-right me-2"></i>Home</a>
                 <a class="text-white-50 link mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About</a>
                 <a class="text-white-50 link mb-2" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contact</a>
                 <a class="text-white-50 link mb-2" href="place.html"><i class="fa fa-angle-right me-2"></i>Places</a>
@@ -2397,7 +2397,7 @@
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
             <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
             <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+            <p><i class="fa fa-envelope me-2"></i>xyz@ple.com</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
             <div class="w-100">
                 <div class="input-group">
@@ -2431,10 +2431,7 @@
            <script src="lib/tempusdominus-bootstrap-4.min.js"></script>
 
             <!-- Compiled and minified JavaScript -->
-   
-
-
-    
+  
         <!-- custom Js -->
         <script src="index.js"></script>
 </body>
