--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
             <a class="nav-link" href="place.html">Places</a>
             <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link active" href="contact.html">Contact</a>
         </div>
     </div>
 </nav>
@@ -121,7 +121,7 @@
             <div class="d-flex flex-column justify-content-start">
                 <a class="text-white-50 link mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Home</a>
                 <a class="text-white-50 link mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About</a>
-                <a class="text-white-50 link mb-2" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contact</a>
+                <a class="text-white-50 link mb-2 active" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contact</a>
                 <a class="text-white-50 link mb-2" href="place.html"><i class="fa fa-angle-right me-2"></i>Places</a>
   
             </div>
@@ -140,7 +140,7 @@
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
             <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
             <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+            <p><i class="fa fa-envelope me-2"></i>ixyz@fjd.com</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
             <div class="w-100">
                 <div class="input-group">
