--- a/privacy.html
+++ b/privacy.html
@@ -166,7 +166,7 @@
             <div class="d-flex flex-column justify-content-start">
                 <a class="text-white-50 link mb-2" href="faq.html"><i class="fa fa-angle-right me-2"></i>FAQs</a>
                 <a class="text-white-50 link mb-2" href="term.html"><i class="fa fa-angle-right me-2"></i>Terms & Conditions</a>
-                <a class="text-white-50 link mb-2" href="privacy.html"><i class="fa fa-angle-right me-2"></i>Privacy Policy</a>
+                <a class="text-white-50 link active mb-2" href="privacy.html"><i class="fa fa-angle-right me-2"></i>Privacy Policy</a>
                 <a class="text-white-50 link mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Packages</a>
                 
             </div>
@@ -175,7 +175,7 @@
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
             <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
             <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+            <p><i class="fa fa-envelope me-2"></i>ixz@ple.com</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
             <div class="w-100">
                 <div class="input-group">
