--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="lib/owl.carousel.min.css">
 <link rel="stylesheet" href="lib/tempusdominus-bootstrap-4.min.css">
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 
      <!-- Compiled and minified CSS -->
 
@@ -41,7 +41,41 @@
             </div>
         </div>
     </nav>
-      
+
+<!-- Popup Start -->
+ 
+ <div class="modal-overlay"></div>
+ <div class="modall">
+   
+   <div class="close-btn">
+     <i class="fa-solid fa-xmark"></i>
+   </div>
+
+   <div class="left">
+     <div class="discount-text">
+       <h3>Special</h3>
+       <h3 class="sale-text">Sale</h3>
+     </div>
+
+     <div class="discount">
+       <p>Save up to</p>
+       <div class="discount-percent">45%</div>
+     </div>
+   </div>
+
+   <div class="right">
+     <h2>
+       Call Directly for <br />
+       best Experience on Vacation
+     </h2>
+     <p>+1-234-567</p>
+     <a href="tel:1-111-11-111" class="discount-btn"><i class="fa fa-phone-alt me-1"></i>Call Now</a>
+   </div>
+ </div>
+
+    <!-- Popup End -->
+
+
     <div class="container-fluid page-header">
         <div class="container">
             <div class="d-flex flex-column align-items-center justify-content-center text-uppercase text-white" style="height: 550px;">
