--- a/about.html
+++ b/about.html
@@ -42,6 +42,39 @@
         </div>
     </div>
 </nav>
+
+<!-- Popup Start -->
+ 
+<div class="modal-overlay"></div>
+<div class="modall">
+  
+  <div class="close-btn">
+    <i class="fa-solid fa-xmark"></i>
+  </div>
+
+  <div class="left">
+    <div class="discount-text">
+      <h3>Special</h3>
+      <h3 class="sale-text">Sale</h3>
+    </div>
+
+    <div class="discount">
+      <p>Save up to</p>
+      <div class="discount-percent">45%</div>
+    </div>
+  </div>
+
+  <div class="right">
+    <h2>
+      Call Directly for <br />
+      best Experience on Vacation
+    </h2>
+    <p>+1-234-567</p>
+    <a href="tel:1-111-11-111" class="discount-btn"><i class="fa fa-phone-alt me-1"></i>Call Now</a>
+  </div>
+</div>
+
+   <!-- Popup End -->
   
 <div class="container-fluid page-header">
     <div class="container">
@@ -100,7 +133,7 @@
             </div>
         </div>
     </div>
-
+</div>
  <!-- Footer Start -->
  <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
     <div class="row pt-5">
