--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
     </div>
 </nav>
   
+<!-- Popup Start -->
+ 
+<div class="modal-overlay"></div>
+<div class="modall">
+  
+  <div class="close-btn">
+    <i class="fa-solid fa-xmark"></i>
+  </div>
+
+  <div class="left">
+    <div class="discount-text">
+      <h3>Special</h3>
+      <h3 class="sale-text">Sale</h3>
+    </div>
+
+    <div class="discount">
+      <p>Save up to</p>
+      <div class="discount-percent">45%</div>
+    </div>
+  </div>
+
+  <div class="right">
+    <h2>
+      Call Directly for <br />
+      best Experience on Vacation
+    </h2>
+    <p>+1-234-567</p>
+    <a href="tel:1-111-11-111" class="discount-btn"><i class="fa fa-phone-alt me-1"></i>Call Now</a>
+  </div>
+</div>
+
+   <!-- Popup End -->
+
   <div class="home-container p-0">
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
